[package]
edition = "2024"
name = "uvi"
version = "0.0.1"
authors = ["kkettums"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1"
git2 = "0.19"
regex = "1.12.2"
zstd = "0.13.3"
bzip2 = "0.6.1"
pacman = "0.1.3"
